--- a/pr-preview/pr-37/intro.html
+++ b/pr-preview/pr-37/intro.html
@@ -342,7 +342,7 @@ arrow vs Arrow
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
 <p><img src="images/excalidraw/intro_copy_and_convert.png" class="img-fluid figure-img"></p>
-<figcaption>Without something like Arrow, you need an interconnections between each data systems</figcaption>
+<figcaption>Without something like Arrow, you need an interconnecting component between each data systems</figcaption>
 </figure>
 </div>
 <p>Even once those technical challenges are solved, there are performance costs at runtime. Converting data between formats takes processing time, and it can lose some details in translation.</p>
@@ -350,7 +350,7 @@ arrow vs Arrow
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
 <p><img src="images/excalidraw/intro_arrow_adapter.png" class="img-fluid figure-img"></p>
-<figcaption>Using Arrow as a standard interchange, you need to only write one interconnect per system and you can then use any of the others that speak Arrow</figcaption>
+<figcaption>Using Arrow as a standard interchange, you need to only write one interconnecter per system, at which point you can then use any of the other systems that also speak Arrow</figcaption>
 </figure>
 </div>
 <p>But in order to get the most savings, you also need to minimize the translation overhead. Ideally, the standard format would be exactly what every analytic project uses internally—then there is no translation. In practice, different databases and query engines make design tradeoffs to optimize for some use cases over others. So the goal of the standard is to be a common denominator, designed for general analytic workloads. This makes it close to what most existing projects were already using, and desirable for future projects to adopt from the beginning.</p>
